<resources>
    <string name="app_name">Recipely</string>
    <string name="tv_1">Explore</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="your_meals">Your Meals</string>
    <string name="add">+</string>
    <string name="title_hint">Recipe Title</string>
    <string name="ingredients_hint">Ingredients</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="account_n">Dont have an account?</string>
    <string name="account_y">Already have an account?</string>


</resources>
