<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/add_recipe_gradient">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_username"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_input"
        android:layout_marginTop="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="15dp"
        android:textSize="13sp"
        android:hint="@string/username_hint"

        android:fontFamily="@font/nunito_light"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register_username"
        android:id="@+id/register_email"
        android:background="@drawable/round_input"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="15dp"
        android:hint="@string/email_hint"
        android:fontFamily="@font/nunito_light"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        android:background="@drawable/round_input"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="15dp"
        android:hint="@string/password_hint"
        android:fontFamily="@font/nunito_light"
        android:textSize="13sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            android:text="@string/register"
            android:textAllCaps="true"
            android:background="@drawable/button_corners"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="15dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:text="@string/account_y"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>