<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/add_recipe_gradient"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/login_email"
        android:layout_marginTop="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_input"
        android:padding="15dp"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/email_hint"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_input"
        android:padding="15dp"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/password_hint"
        android:textSize="13sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="@drawable/button_corners"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="15dp"
        android:fontFamily="@font/nunito_bold"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_tv"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:text="@string/account_n"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:id="@+id/illust"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/illust"
        android:layout_marginBottom="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>