<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    app:layout_constraintTop_toBottomOf="@+id/meal_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/add_recipe_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:id="@+id/constraint1"
        android:background="@drawable/round_corners_new_recipe">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_et"
        android:background="@drawable/input_new"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/title_hint"
        android:textSize="15sp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/dark"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredients_et"
        android:background="@drawable/input_new"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textMultiLine"
        android:textColor="@color/dark"
        android:hint="@string/ingredients_hint"
        android:textSize="15sp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:fontFamily="@font/nunito_regular"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_et"
        android:background="@drawable/input_new"
        app:layout_constraintTop_toBottomOf="@id/ingredients_et"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textMultiLine"
        android:textColor="@color/dark"
        android:hint="@string/instructions"
        android:padding="15dp"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:fontFamily="@font/nunito_regular"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_photo"
            app:layout_constraintTop_toBottomOf="@id/instructions_et"
            android:gravity="center"
            >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/photo_button"
            android:id="@+id/photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            />

            <Button
                android:background="@drawable/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/photo_button"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/nunito_light"
                android:textColor="#6B6B6B"
                android:text="Add Photo"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_cancel"
            app:layout_constraintTop_toBottomOf="@id/add_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="45dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingBottom="25dp">
            <ImageButton
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:id="@+id/cancel_btn"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cancel_btn"
                />
        <ImageButton
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:id="@+id/save_btn"
            android:layout_marginStart="10dp"
            android:background="@drawable/save_btn"
            />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

